--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Paper Kit 2 by Creative Tim</title>
@@ -13,16 +13,16 @@
     <meta name="viewport" content="width=device-width" />
 
     <!-- Bootstrap core CSS     -->
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="assets/css/paper-kit.css?v=2.1.0" rel="stylesheet"/>
+	<link href="CSS/bootstrap.min.css" rel="stylesheet" />
+	<link href="CSS/paper-kit.css?v=2.1.0" rel="stylesheet"/>
 
 	<!--  CSS for Demo Purpose, don't include it in your project     -->
-	<link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="CSS/demo.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="CSS/nucleo-icons.css" rel="stylesheet" />
 
 </head>
 
@@ -35,7 +35,7 @@
                     <span class="navbar-toggler-bar"></span>
                     <span class="navbar-toggler-bar"></span>
                 </button>
-                <a class="navbar-brand" href="https://www.creative-tim.com">Paper Kit 2</a>
+                <a class="navbar-brand" href="https://www.creative-tim.com">QHacks 2018</a>
             </div>
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
@@ -67,31 +67,31 @@
                         <a href="documentation/tutorial-components.html" target="_blank" class="nav-link"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
                     </li>
                     <li class="nav-item">
-						<a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
+						<a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-success btn-round">Donate</a>
 					</li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="wrapper">
-        <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+        <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
             <div class="filter"></div>
     		<div class="content-center">
     			<div class="container">
     				<div class="title-brand">
     					<h1 class="presentation-title">Where could I have gone?</h1>
     					<div class="fog-low">
-    						<img src="assets/img/fog-low.png" alt="">
+    						<img src="img/fog-low.png" alt="">
     					</div>
     					<div class="fog-low right">
-    						<img src="assets/img/fog-low.png" alt="">
+    						<img src="img/fog-low.png" alt="">
     					</div>
     				</div>
 
     				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
     			</div>
     		</div>
-            <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); ">
+            <div class="moving-clouds" style="background-image: url('img/clouds.png'); ">
 
             </div>
     		<h6 class="category category-absolute">Designed and coded by
@@ -767,22 +767,22 @@
                             <div class="row">
                                 <div class="col-8 col-sm-6 col-md-3">
                                     <h4 class="images-title">Rounded Image</h4>
-                                    <img src="assets/img/uriel-soberanes.jpg" class="img-rounded img-responsive" alt="Rounded Image">
+                                    <img src="img/uriel-soberanes.jpg" class="img-rounded img-responsive" alt="Rounded Image">
                                     <div class="img-details">
                                         <div class="author">
-                                            <img src="assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                            <img src="img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                                         </div>
                                         <p>Chet Faker</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-sm-3 col-md-2 mr-auto  ml-auto">
                                     <h4 class="images-title">Circle Image</h4>
-                                    <img src="assets/img/faces/joe-gardner-2.jpg" class="img-circle img-no-padding img-responsive" alt="Rounded Image">
+                                    <img src="img/faces/joe-gardner-2.jpg" class="img-circle img-no-padding img-responsive" alt="Rounded Image">
                                     <p class="text-center">Joe Gardner</p>
                                 </div>
                                 <div class="col-6 col-sm-3 col-md-2 mr-auto">
                                     <h4 class="images-title">Thumbnail</h4>
-                                    <img src="assets/img/faces/clem-onojeghuo-3.jpg" class="img-thumbnail img-responsive" alt="Rounded Image">
+                                    <img src="img/faces/clem-onojeghuo-3.jpg" class="img-thumbnail img-responsive" alt="Rounded Image">
                                     <p class="text-center">Erik Faker</p>
                                 </div>
                             </div>
@@ -884,19 +884,19 @@
 								    </ol>
                                     <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active">
-                                        <img class="d-block img-fluid" src="assets\img\soroush-karimi.jpg" alt="First slide">
+                                        <img class="d-block img-fluid" src="img\soroush-karimi.jpg" alt="First slide">
                                     	<div class="carousel-caption d-none d-md-block">
                                             <p>Somewhere</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block img-fluid" src="assets\img\federico-beccari.jpg" alt="Second slide">
+                                        <img class="d-block img-fluid" src="img\federico-beccari.jpg" alt="Second slide">
                                     	<div class="carousel-caption d-none d-md-block">
                                     	    <p>Somewhere else</p>
                                     	</div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block img-fluid" src="assets\img\joshua-stannard.jpg" alt="Third slide">
+                                        <img class="d-block img-fluid" src="img\joshua-stannard.jpg" alt="Third slide">
                                     	<div class="carousel-caption d-none d-md-block">
                                     	    <p>Here it is</p>
                                     	</div>
@@ -961,7 +961,7 @@
 					</div>
 				</div>
 			</div>
-            <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
+            <div class="section section-image section-login" style="background-image: url('img/login-image.jpg');">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 ml-auto mr-auto">
@@ -1012,13 +1012,13 @@
                     <div class="row example-page">
                         <div class="col-md-6 text-center">
                             <a href="examples/landing.html" target="_blank">
-                                <img src="assets\img\examples\landing-page.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
+                                <img src="img\examples\landing-page.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
                                 <a href="examples/landing.html" class="btn btn-outline-neutral btn-round" target="_blank">Landing Page</a>
                             </a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="examples/profile.html" target="_blank">
-                                <img src="assets\img\examples\profile-page.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
+                                <img src="img\examples\profile-page.jpg" alt="Rounded Image" class="img-rounded img-responsive" style="width: 100%">
                                 <a href="examples/profile.html" class="btn btn-outline-neutral btn-round" target="_blank">Profile Page</a>
                             </a>
                         </div>
