--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,7 @@
 				            </div>
                         </div>
                     </div>
-            <div class="moving-clouds" style="background-image: url('img/clouds.png'); ">
-
-            </div>
+            <!--<div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>-->
             
                 <div class="content-center">
                     <center><h6  class="content-center"
