--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                     <div class="container text-center">
 				        <div class="row">
                             <div class="col-md-5 ml-auto mr-auto download-area">
-                                <button id="fitbitbutton" class="btn btn-success btn-round btn-photo"></button>
+                                <a href="/authorize" class="btn btn-success btn-round btn-photo"></a>
 				            </div>
                         </div>
                     </div>
