--- a/public/index.html
+++ b/public/index.html
@@ -86,11 +86,10 @@
 				        <div class="row">
                             <div class="col-md-5 ml-auto mr-auto download-area">
                                 <a href="/authorize" class="btn btn-success btn-round btn-photo"></a>
+                                    <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
 				            </div>
                         </div>
                     </div>
-            <!--<div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>-->
-            
                 <div class="content-center">
                     <center><h6  class="content-center"
                         >
