--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             <div class="filter"></div>
     		<div class="content-center">
     			<div class="container">
-    			    <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
+    			    <div z-index='-1' class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
     				<div class="title-brand">
     					<h1 class="presentation-title">Where could you have gone?</h1>
     					<div class="fog-low">
