fixing index.html

--- a/public/index.html
+++ b/public/index.html
@@ -69,39 +69,27 @@
     <div class="wrapper">
         <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
             <div class="filter"></div>
-    		<div class="content-center">
-    			<div class="container">
-    				<div class="title-brand">
-    					<h1 class="presentation-title">Where could you have gone?</h1>
-    					<div class="fog-low">
-    						<img src="img/fog-low.png" alt="">
-    					</div>
-    					<div class="fog-low right">
-    						<img src="img/fog-low.png" alt="">
-    					</div>
-    				</div>
-
-    				<h2 class="presentation-subtitle text-center">Connect with: </h2>
-                    <div class="container text-center">
-				        <div class="row">
-                            <div class="col-md-5 ml-auto mr-auto download-area">
-                                <a href="/authorize" class="btn btn-success btn-round btn-photo"></a>
-				            </div>
-                        </div>
-                    </div>
-                <div class="content-center">
-                <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
+        		<div class="content-center">
+        			<div class="container">
+        				<div class="title-brand">
+        					<h1 class="presentation-title">Where could I have gone?</h1>
+        					<div class="fog-low">
+        						<img src="img/fog-low.png" alt="">
+        					</div>
+            					<div class="fog-low right">
+            						<img src="img/fog-low.png" alt="">
+            					</div>
+        				    </div>
+    
+        				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
+        			</div>
+        		</div>
+            <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
     		<h6 class="category category-absolute">Designed and coded by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
     				the Qhackers
     			</a>
     		</h6>
-      <!--          <h6 class="content-center">Created by-->
-    		<!--	<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">the Qhackers </a>-->
-      <!--          <a href="https://www.creative-tim.com" target="_blank"> & Creative Tim </a>-->
-      <!--      </h6></center>-->
-           </div>    
-         </div>
     	</div>
 </body> 
 
