--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
         				    </div>
     
         				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
-        				<a href="/authorize" class="btn btn-success btn-round btn-photo"></a>
+        				<h6> <a href="/authorize" class="btn btn-success btn-round btn-photo"></a> </h6>
         			</div>
         		</div>
             <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
