fixing index.html

--- a/public/index.html
+++ b/public/index.html
@@ -82,10 +82,9 @@
         				    </div>
     
         				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
-        				<h6> <a href="/authorize" class="btn btn-success btn-round btn-photo"></a> </h6>
+        				<center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
         			</div>
         		</div>
-            <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
     		<h6 class="category category-absolute">Designed and coded by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
     				the Qhackers
