--- a/public/index.html
+++ b/public/index.html
@@ -81,13 +81,16 @@
             					</div>
         				    </div>
     
-        				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
+        				<h2 class="presentation-subtitle text-center">Connect with: </h2><div class="row">
+                            <div class="col-md-5 ml-auto mr-auto download-area">
         				<center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
+                        </div>
+                        </div>
+                        </div>
         			</div>
-        		</div>
-    		<h6 class="category category-absolute">Designed and coded by
+    		<h6 class="category category-absolute">Created by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
-    				the Qhackers
+    				the Qhackers <a href="https://www.creative-tim.com" target="_blank"> & Creative Tim
     			</a>
     		</h6>
     	</div>
