--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Where could I have gone?</title>
+    <style type="text/css">
+        #background-img{
+            z-index: -1;
+          }
+    </style>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
     <!-- Bootstrap core CSS     -->
-	<link href="CSS/bootstrap.min.css" rel="stylesheet" />
-	<link href="CSS/paper-kit.css?v=2.1.0" rel="stylesheet"/>
+    <link href="CSS/bootstrap.min.css" rel="stylesheet" />
+    <link href="CSS/paper-kit.css?v=2.1.0" rel="stylesheet"/>
 
-	<!--  CSS for Demo Purpose, don't include it in your project     -->
-	<link href="CSS/demo.css" rel="stylesheet" />
+    <!--  CSS for Demo Purpose, don't include it in your project     -->
+    <link href="CSS/demo.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
@@ -60,40 +65,45 @@
                         </a>
                     </li>
                     <li class="nav-item">
-						<a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-success btn-round">Donate</a>
-					</li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="wrapper">
-        <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
+                      <a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-success btn-round">Donate</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+
+<div class="wrapper">
+    <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
             <div class="filter"></div>
-        		<div class="content-center">
-        			<div class="container">
-        				<div class="title-brand">
-        					<h1 class="presentation-title">Where could I have gone?</h1>
-        					<div class="fog-low">
-        						<img src="img/fog-low.png" alt="">
-        					</div>
-            					<div class="fog-low right">
-            						<img src="img/fog-low.png" alt="">
-            					</div>
-        				    </div>
-    
-        				<h2 class="presentation-subtitle text-center">Connect with: </h2><div class="row">
-                            <div class="col-md-5 ml-auto mr-auto download-area">
-        				<center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
+            <div class="content-center">
+               <div class="container">
+                    <div class="title-brand">
+                        <h1 class="presentation-title">Where could I have gone?</h1>
+                        <div class="fog-low">
+                            <img src="img/fog-low.png" alt="">
                         </div>
+                        <div class="fog-low right">
+                            <img src="img/fog-low.png" alt="">
                         </div>
+                    </div>
+
+                    <h2 class="presentation-subtitle text-center">Connect with: </h2>
+                    <div class="row">
+                        <div class="col-md-5 ml-auto mr-auto download-area">
+                            <center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
                         </div>
-        			</div>
-    		<h6 class="category category-absolute">Created by
-    			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
-    				the Qhackers <a href="https://www.creative-tim.com" target="_blank"> & Creative Tim
-    			</a>
-    		</h6>
-    	</div>
+                    </div>
+                </div>
+            </div>
+            <h6 class="category category-absolute">Created by
+                <a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
+                        the Qhackers <a href="https://www.creative-tim.com" target="_blank"> & Creative Tim
+                </a>
+            </h6>  
+
+            <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
+    </div>
+</div>
 </body> 
 
 <!-- Core JS Files -->
@@ -101,7 +111,7 @@
 <script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="assets/js/popper.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-    
+
 <!-- Fitbit API call-->
 
 <!-- Switches -->
