--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Where could I have gone?</title>
-    <style type="text/css">
-        #background-img{
-            z-index: -1;
-          }
-    </style>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -21,8 +16,8 @@
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
     <link href="CSS/paper-kit.css?v=2.1.0" rel="stylesheet"/>
 
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="CSS/demo.css" rel="stylesheet" />
+<!--      CSS for Demo Purpose, don't include it in your project    
+    <link href="CSS/demo.css" rel="stylesheet" /> -->
 
     <!--     Fonts and icons     -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
