Fixed the fitbit button (again)

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 
                     <h2 class="presentation-subtitle text-center">Connect with: </h2>
                     <div class="row">
-                        <div style="margin-bottom: 30px;" style="margin-top: 20px;" class="col-md-5 ml-auto mr-auto download-area">
+                        <div style="margin-top: 20px;" class="col-md-5 ml-auto mr-auto download-area">
                             <center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
                         </div>
                     </div>
