deleted some old commented code

--- a/public/index.html
+++ b/public/index.html
@@ -84,16 +84,16 @@
 
                     <h2 class="presentation-subtitle text-center">Connect with: </h2>
                     <div class="row">
-                        <div style="margin-bottom: 30px;" class="col-md-5 ml-auto mr-auto download-area">
+                        <div style="margin-top: 7px;" class="col-md-5 ml-auto mr-auto download-area">
                             <center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
                         </div>
                     </div>
                 </div>
             </div>
             <h6 class="category category-absolute">Created by
-                <a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
-                        the Qhackers <a href="https://www.creative-tim.com" target="_blank"> & Creative Tim
-                </a>
+                <a href="https://github.com/ACalverley/qhacks_2018" target="_blank"> the Qhackers </a>
+                &
+                <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
             </h6>  
 
             <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
