changed donate link

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                      <a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-success btn-round">Donate</a>
+                      <a href="http://www.savethechildren.org/site/c.8rKLIXMGIpI4E/b.6153015/k.E633/Education.htm" target="_blank" class="btn btn-success btn-round">Donate</a>
                   </li>
               </ul>
           </div>
