--- a/public/index.html
+++ b/public/index.html
@@ -91,11 +91,13 @@
                     </div>
                 </div>
             </div>
-            <h6 class="category category-absolute">Created by
+            <div class="row justify-content-center pl-5 pt-5">
+            <h6 class="col-md-6">Created by
                 <a href="https://github.com/ACalverley/qhacks_2018" target="_blank"> the Qhackers </a>
                 &
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
             </h6>  
+            </div>
 
             <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
     </div>
