--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png">
+    <link rel="icon" type="image/png" href="img/footsprints.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/footprints.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Where could I have gone?</title>
@@ -14,9 +14,9 @@
 
     <!-- Bootstrap core CSS     -->
     <link href="CSS/bootstrap.min.css" rel="stylesheet" />
-    <link href="CSS/paper-kit.css?v=2.1.0" rel="stylesheet"/>
+    <link href="CSS/paper-kit.css" rel="stylesheet"/>
 
-<!--      CSS for Demo Purpose, don't include it in your project    
+<!--      CSS for Demo Purpose, don't include it in your project
     <link href="CSS/demo.css" rel="stylesheet" /> -->
 
     <!--     Fonts and icons     -->
@@ -93,16 +93,16 @@
             </div>
             <div class="row justify-content-center pl-5 pt-5">
             <h6 class="col-md-6">Created by
-                <a href="https://github.com/ACalverley/qhacks_2018" target="_blank"> the Qhackers </a>
+                <a href="https://github.com/chrismaltais/wherecouldihavegone" target="_blank"> the Qhackers </a>
                 &
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
-            </h6>  
+            </h6>
             </div>
 
             <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
     </div>
 </div>
-</body> 
+</body>
 
 <!-- Core JS Files -->
 <script src="assets/js/jquery-3.2.1.js" type="text/javascript"></script>
@@ -123,6 +123,6 @@
 <script src="assets/js/bootstrap-datetimepicker.min.js"></script>
 
 <!--  Paper Kit Initialization and functons -->
-<script src="assets/js/paper-kit.js?v=2.1.0"></script>
+<script src="assets/js/paper-kit.js"></script>
 
 </html>
