--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="img/footsprints.ico">
+    <link rel="icon" type="image/png" href="img/footprints.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="img/footprints.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -20,8 +20,8 @@
     <link href="CSS/demo.css" rel="stylesheet" /> -->
 
     <!--     Fonts and icons     -->
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="CSS/nucleo-icons.css" rel="stylesheet" />
 
 </head>
@@ -105,24 +105,24 @@
 </body>
 
 <!-- Core JS Files -->
-<script src="assets/js/jquery-3.2.1.js" type="text/javascript"></script>
-<script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
-<script src="assets/js/popper.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.js" type="text/javascript"></script>
+<script src="js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
+<script src="js/popper.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!-- Fitbit API call-->
 
 <!-- Switches -->
-<script src="assets/js/bootstrap-switch.min.js"></script>
+<script src="js/bootstrap-switch.min.js"></script>
 
 <!--  Plugins for Slider -->
-<script src="assets/js/nouislider.js"></script>
+<script src="js/nouislider.js"></script>
 
 <!--  Plugins for DateTimePicker -->
-<script src="assets/js/moment.min.js"></script>
-<script src="assets/js/bootstrap-datetimepicker.min.js"></script>
+<script src="js/moment.min.js"></script>
+<script src="js/bootstrap-datetimepicker.min.js"></script>
 
 <!--  Paper Kit Initialization and functons -->
-<script src="assets/js/paper-kit.js"></script>
+<script src="js/paper-kit.js"></script>
 
 </html>
