--- a/public/index.html
+++ b/public/index.html
@@ -104,13 +104,44 @@
 </div>
 </body>
 
+<!-- CDN for Axios Module -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+<!-- Grab Location From Browser -->
+<script type="text/javascript">
+function success(position) {
+    /*
+    axios.post('/userLocation', {
+        userLat: position.coords.latitude,
+        userLong: position.coords.longitude
+    }).then((response) => {
+        console.log(response);
+    }).catch((error) => {
+        console.log(error);
+    })
+    */
+    let userLat = position.coords.latitude;
+    let userLong = position.coords.longitude;
+    console.log(userLat);
+    console.log(userLong);
+}
+
+function error(msg) {
+    console.log(msg);
+}
+
+if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(success, error);
+} else {
+    error('Geolocation not supported on this browser.')
+}
+</script>
+
 <!-- Core JS Files -->
 <script src="js/jquery-3.2.1.js" type="text/javascript"></script>
 <script src="js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="js/popper.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-<!-- Fitbit API call-->
 
 <!-- Switches -->
 <script src="js/bootstrap-switch.min.js"></script>
