removed request for location - now in .ejs file

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <!-- Grab Location From Browser -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 function success(position) {
     /*
     axios.post('/userLocation', {
@@ -135,7 +135,7 @@ if (navigator.geolocation) {
 } else {
     error('Geolocation not supported on this browser.')
 }
-</script>
+</script> -->
 
 <!-- Core JS Files -->
 <script src="js/jquery-3.2.1.js" type="text/javascript"></script>
