--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,49 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="CSS/nucleo-icons.css" rel="stylesheet" />
 
+    <script type="text/javascript">
+        function getUserLocation(isDemo) {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(sendUserLocation, error);
+            } else {
+                error('Geolocation not supported on this browser.')
+            }
+
+            function post(path, params, method) {
+                method = method || "post"; // Set method to post by default if not specified.
+
+                // The rest of this code assumes you are not using a library.
+                // It can be made less wordy if you use one.
+                var form = document.createElement("form");
+                form.setAttribute("method", method);
+                form.setAttribute("action", path);
+
+                for(var key in params) {
+                    if(params.hasOwnProperty(key)) {
+                        var hiddenField = document.createElement("input");
+                        hiddenField.setAttribute("type", "hidden");
+                        hiddenField.setAttribute("name", key);
+                        hiddenField.setAttribute("value", params[key]);
+
+                        form.appendChild(hiddenField);
+                    }
+                }
+
+                document.body.appendChild(form);
+                form.submit();
+            }
+
+            function sendUserLocation(position){
+                post('/userLocation/', {lat : position.coords.latitude, long : position.coords.longitude, isDemo : isDemo});
+            }
+
+            // if the user doesn't allow their location to be revealed - should add image inside maps to say "Only available if you let us know your location!"
+            function error(msg) {
+                console.log(msg);
+            }
+        }
+    </script>
+
 </head>
 
 <body>
@@ -69,73 +112,52 @@
 
 <div class="wrapper">
     <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
-            <div class="filter"></div>
-            <div class="content-center">
-               <div class="container">
-                    <div class="title-brand">
-                        <h1 class="presentation-title">Where could I have gone?</h1>
-                        <div class="fog-low">
-                            <img src="img/fog-low.png" alt="">
-                        </div>
-                        <div class="fog-low right">
-                            <img src="img/fog-low.png" alt="">
-                        </div>
+        <div class="filter"></div>
+        <div class="content-center">
+           <div class="container">
+                <div class="title-brand">
+                    <h1 class="presentation-title">Where could I have gone?</h1>
+                    <div class="fog-low">
+                        <img src="img/fog-low.png" alt="">
                     </div>
+                    <div class="fog-low right">
+                        <img src="img/fog-low.png" alt="">
+                    </div>
+                </div>
 
-                    <h2 class="presentation-subtitle text-center">Connect with: </h2>
-                    <div class="row">
-                        <div style="margin-top: 7px;" class="col-md-5 ml-auto mr-auto download-area">
+                <h2 class="presentation-subtitle text-center">Connect with:</h2>
+                <div class="row">
+                    <div style="margin-top: 7px; padding-right: 35px;" class="col-md-5 ml-auto mr-auto download-area">
                         <div style="margin-top: 20px;" class="col-md-5 ml-auto mr-auto download-area">
-                            <center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
+                            <center><a href="javascript:getUserLocation(0);" class="btn btn-success btn-round btn-photo"></a></center>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row justify-content-center pl-5 pt-5">
-            <h6 class="col-md-6">Created by
-                <a href="https://github.com/chrismaltais/wherecouldihavegone" target="_blank"> the Qhackers </a>
-                &
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
-            </h6>
-            </div>
+                <h2 class="presentation-subtitle text-center" style="margin-top: 30px;">No Fitbit?</h2>
+                <div class="row">
+                    <div style="margin-top: 7px;" class="col-md-5 ml-auto mr-auto download-area">
+                        <div style="margin-top: 20px;" class="col-md-5 ml-auto mr-auto download-area">
+                            <center><a href="javascript:getUserLocation(1);" class="btn btn-success btn-round ">Demo</a></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center pl-5 pt-5">
+                <h6 class="col-md-6">Created by
+                    <a href="https://github.com/chrismaltais/wherecouldihavegone" target="_blank"> the Qhackers </a>
+                    &
+                    <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
+                </h6>
+                </div>
 
-            <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
+        <!-- <div id="background-img" class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>   -->
+            </div>
+        </div>
     </div>
 </div>
 </body>
 
 <!-- CDN for Axios Module -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-<!-- Grab Location From Browser -->
-<!-- <script type="text/javascript">
-function success(position) {
-    /*
-    axios.post('/userLocation', {
-        userLat: position.coords.latitude,
-        userLong: position.coords.longitude
-    }).then((response) => {
-        console.log(response);
-    }).catch((error) => {
-        console.log(error);
-    })
-    */
-    let userLat = position.coords.latitude;
-    let userLong = position.coords.longitude;
-    console.log(userLat);
-    console.log(userLong);
-}
-
-function error(msg) {
-    console.log(msg);
-}
-
-if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(success, error);
-} else {
-    error('Geolocation not supported on this browser.')
-}
-</script> -->
 
 <!-- Core JS Files -->
 <script src="js/jquery-3.2.1.js" type="text/javascript"></script>
